<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SIRI REST Client</string>
    <string name="new_fragment">New fragment</string>
    
    <!-- Generic UI element strings -->
    <string name="submit_button">Submit</string>
    <string name="menu_settings">Settings</string>

<!--     User Interface Strings for SIRI elements  -->
    <!-- Vehicle Monitoring fields -->
    <!-- Request -->
    <string name="vehicle_req_tab_title">Veh_Request</string>
    <string name="developer_key_veh">Developer Key</string>
    <string name="operator_ref_veh">OperatorRef</string>
    <string name="vehicle_ref">VehicleRef</string>
    <string name="line_ref_veh">LineRef</string>
    <string name="direction_ref_veh">DirectionRef</string>
    <string name="vehicle_mon_detail_level">VehicleMonDetailLevel</string>
    <string name="vehicle_mon_detail_level_default_value">normal</string>
    <string name="max_num_of_calls_onwards_veh">MaxNumOfCallsOnwards</string>
    <!-- Response -->
    <string name="vehicle_res_tab_title">Veh_Response</string>
    
    <!-- Stop Monitoring fields -->
    <!-- Request -->
    <string name="stop_req_tab_title">Stop_Request</string>
    <string name="developer_key_stop">Developer Key</string>
    <string name="operator_ref_stop">OperatorRef</string>
    <string name="monitoring_ref">MonitoringRef</string>
    <string name="line_ref_stop">LineRef</string>
    <string name="direction_ref_stop">DirectionRef</string>
    <string name="stop_mon_detail_level">StopMonDetailLevel</string>
    <string name="stop_mon_detail_level_default_value">normal</string>
    <string name="max_num_of_calls_onwards_stop">MaxNumOfCallsOnwards</string>
    <!-- Request -->
    <string name="stop_res_tab_title">Stop_Response</string>

    <!-- MTA-specific input -->
    <string name="mta_operator_ref_value">MTA NYCT</string>
    <string name="mta_vehicle_ref_value">7560</string>
    <string name="mta_monitoring_ref_value">308214</string>
    
    <!-- 
    Settings 
    -->
    <string name="pref_Title">Settings</string>
    
    <!-- Response Type (XML or JSON) -->
    <string name="pref_category_response_type_title">HTTP Options</string>
    <string name="pref_response_type_title">Server Response Type</string>
    <string name="pref_response_type_summary">Select JSON or XML format for the data to be returned by the server</string>
    <string name="pref_response_type_dialog_title">Response Type</string>
    <string name="pref_response_type_default_value">0</string>
    
    <!-- HTTP Connection -->    
    <string name="pref_http_connection_title">HTTP Connection Type</string>
    <string name="pref_http_connection_summary">Select the internal Jackson or native Android HTTP connection</string>
    <string name="pref_http_connection_dialog_title">HTTP Connection Type</string>
    <string name="pref_http_connection_default_value">0</string>
    
    <!-- Jackson JSON parsing -->
    <string name="pref_category_json_parsing_title">Jackson Options</string>
    <string name="pref_jackson_object_title">JSON Parser Type</string>
    <string name="pref_jackson_object_summary">Select the ObjectMapper or ObjectReader to perform JSON parsing</string>
    <string name="pref_jackson_object_dialog_title">Jackson JSON Parser Type</string>
    <string name="pref_jackson_object_default_value">0</string>
    
    <!-- Number of test requests to run consecutively -->
    <string name="pref_category_tests_title">Test Parameters</string>
    <string name="pref_num_requests_title">Number of Consecutive Requests</string>
    <string name="pref_num_requests_summary">Sets the number of consecutive requests to execute when the Submit button is tapped (for time benchmarking).</string>
    <string name="pref_num_requests_dialog_title">Set Number of Requests</string>
    <string name="pref_num_requests_default_value">1</string>
    
    <!-- Amount of time to allow between requests, in seconds -->    
    <string name="pref_time_between_requests_title">Time Between Requests (sec)</string>
    <string name="pref_time_between_requests_summary">Sets the amount of time in seconds between consecutive tests (for time benchmarking).</string>
    <string name="pref_time_between_requests_dialog_title">Set Time Between Requests (seconds)</string>
    <string name="pref_time_between_requests_default_value">0</string>
    
    <!-- Beep when the app has finished running the test -->    
    <string name="pref_beep_on_test_complete_title">Beep On Test Complete</string>
    <string name="pref_beep_on_test_complete_summary">If set to true, the app will beep when its finished calculating results of tests.</string>    
    <string name="pref_beep_on_test_complete_default_value">0</string>
    
</resources>