<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_category_response_type_title"
        android:key="pref_key_response_type_category">
        <ListPreference
            android:key="pref_key_response_type"
            android:title="@string/pref_response_type_title"
            android:summary="@string/pref_response_type_summary"
            android:dialogTitle="@string/pref_response_type_dialog_title"            
            android:entries="@array/pref_response_type_entries"
            android:entryValues="@array/pref_response_type_values"
            android:defaultValue="0" />
        <ListPreference
            android:key="pref_key_http_connection"
            android:title="@string/pref_http_connection_title"
            android:summary="@string/pref_http_connection_summary"
            android:dialogTitle="@string/pref_http_connection_dialog_title"
            android:entries="@array/pref_http_connection_entries"
            android:entryValues="@array/pref_http_connection_values"
            android:defaultValue="0" />
    </PreferenceCategory>    
    <PreferenceCategory
        android:title="@string/pref_category_json_parsing_title"
        android:key="pref_key_json_category">
        <ListPreference
            android:key="pref_key_jackson_object"
            android:title="@string/pref_jackson_object_title"
            android:summary="@string/pref_jackson_object_summary"
            android:dialogTitle="@string/pref_jackson_object_dialog_title"            
            android:entries="@array/pref_jackson_object_entries"
            android:entryValues="@array/pref_jackson_object_values"
            android:defaultValue="0" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_tests_title"
        android:key="pref_key_tests_category">
        <EditTextPreference
            android:key="pref_key_num_requests"
            android:title="@string/pref_num_requests_title"
            android:summary="@string/pref_num_requests_summary"
            android:dialogTitle="@string/pref_num_requests_dialog_title"            
            android:defaultValue="1" />
        
        <EditTextPreference
            android:key="pref_key_time_between_requests"
            android:title="@string/pref_time_between_requests_title"
            android:summary="@string/pref_time_between_requests_summary"
            android:dialogTitle="@string/pref_time_between_requests_dialog_title"            
            android:defaultValue="0" />
        
        <CheckBoxPreference
            android:key="pref_key_beep_on_test_complete"
            android:title="@string/pref_beep_on_test_complete_title"
            android:summary="@string/pref_beep_on_test_complete_summary"                        
            />
    </PreferenceCategory>
</PreferenceScreen>