<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- Demonstrates basic application screen.
     See corresponding Java code com.android.sdk.app.HelloWorld.java. -->

<!-- This screen consists of a single text field that
     displays our "Hello, World!" text. -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer_key_stop" />

    <EditText
        android:id="@+id/key"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:ems="10" >
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operator_ref_stop" />

    <EditText
        android:id="@+id/operatorRef"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/mta_operator_ref_value"
        android:ems="10" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monitoring_ref"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/monitoringRef"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/mta_monitoring_ref_value"
        android:ems="10" />
    
    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/line_ref_stop"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/lineRef"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:ems="10" />
    
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction_ref_stop"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/directionRef"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10" />
    
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_mon_detail_level"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/stopMonDetailLevel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_mon_detail_level_default_value"
        android:ems="10" />
    
    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_num_of_calls_onwards_stop"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/maxNumOfCallsOnwardsStop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10" />
   
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit_button" />

</LinearLayout>

</ScrollView>